# deepcelltypes-cellsighter

./: README.md  __main__.py  pyproject.toml
cellsighter/: __init__.py  __main__.py  model.py  run.py
