[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcelltypes-cellsighter"
version = "0.1.0"
description = "CellSighter ResNet-50 baseline for cell type classification"
requires-python = ">=3.11"
dependencies = [
    "deepcell-types",
    "torch",
    "torchvision",
    "click",
    "numpy",
    "pandas",
    "tqdm",
]
